# AlmondHealth

./: .gitignore  README.md
.claude/: CLAUDE.md  settings.json
.claude/commands/: add-pms-connector.md  dev.md  setup.md  smoke.md
backend/: .env.example  .gitignore  CONTRACT.md  README.md  pyproject.toml
backend/scripts/: poc_demo.py  smoke.py
backend/src/almond/: api.py  auth.py  config.py  db.py  entitlements.py  models.py  notify.py  pdf.py  store.py
backend/src/almond/connectors/: base.py  registry.py
backend/src/almond/routers/: analytics.py  billing.py  core.py  forms.py  messages.py  patient.py  patient_public.py  reviews.py  settings.py  usage.py  waitlist.py
backend/src/practicebridge/: api.py  auth.py  config.py  db.py  models.py  store.py
backend/src/practicebridge/connectors/: denticon.py  open_dental.py
backend/src/practicebridge/routers/: core.py  patient_public.py  reports.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  api.js  api.ts  ctx.jsx  ctx.tsx  data.js  data.ts  entitlements.ts  main.jsx  main.tsx  types.ts  ui.jsx  ui.tsx
frontend/src/screens/: Billing.tsx  Forms.jsx  Forms.tsx  Leads.jsx  Leads.tsx  Login.jsx  Login.tsx  Messages.jsx  Messages.tsx  Onboarding.jsx  Onboarding.tsx  PatientBooking.jsx  PatientBooking.tsx  PatientForm.jsx  PatientForm.tsx  PatientTimeline.jsx  PatientTimeline.tsx  Reports.jsx  Reports.tsx  (+10 more)
research/market-and-gtm/: REPORT.md
research/tiered-feature-roadmap/: DEV_PLAN.md  REPORT.md
(+3 files in other folders)
