[project]
name = "practicebridge-backend"
version = "0.1.0"
description = "PracticeBridge backend — canonical front-office API over dental PMS connectors (Open Dental POC)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/practicebridge"]
